first gulp integration

--- a/templates/jade/layout.jade
+++ b/templates/jade/layout.jade
@@ -5,4 +5,4 @@ html(ng-app="ababool")
     link(rel='stylesheet', href='/stylesheets/ababool.css')
   body(ng-controller="ababoolCtrl")
     block content
-    script(src='/javascripts/ababool.js')
+    script(src='/javascripts/ababool.min.js')
