--- a/templates/views/layout.jade
+++ b/templates/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html(ng-app="ababool")
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/ababool.css')
+    link(rel='stylesheet', href='/stylesheets/main.css')
   body(ng-controller="ababoolCtrl")
     block content
     script(src='/javascripts/ababool.min.js')
