--- a/templates/src/css/ababool/_system.scss
+++ b/templates/src/css/ababool/_system.scss
@@ -1,15 +1,3 @@
-#preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #fff;
-    z-index: 9999;
-    background-image: url("../images/ajax-loader.gif");
-    background-repeat: no-repeat;
-    background-position: center center;
-}
 body,
 html {
     padding: 0;
@@ -43,7 +31,9 @@ body {
 .pt-currentout {
     z-index: 9998;
 }
-
+.pt-current {
+    z-index: 9997;
+}
 .clearfix:before,
 .clearfix:after {
     content: " ";
@@ -51,4 +41,13 @@ body {
 }
 .clearfix:after {
     clear: both;
+}
+
+.container.ng-hide {
+    transition: 0.5s linear all;
+    opacity: 0;
+}
+.container {
+    transition: 2s linear all;
+    opacity: 1;
 }
