--- a/templates/ababool_plugins/navigator/index.jade
+++ b/templates/ababool_plugins/navigator/index.jade
@@ -1,10 +1,10 @@
 #navigator(ng-show="navigator")
   div(class="navigator" ng-show="navigator")
-    div(class="navigator_arrow arrow_right" ng-show="navright" ng-click="gotopage(right)")
+    div(class="navigator_arrow arrow_right" ng-show="navright" ng-click="gotopage(right,1)")
       span(class="glyphicon glyphicon-chevron-right")
-    div(class="navigator_arrow arrow_left" ng-show="navleft" ng-click="gotopage(left)")
+    div(class="navigator_arrow arrow_left" ng-show="navleft" ng-click="gotopage(left,2)")
       span(class="glyphicon glyphicon-chevron-left")
-    div(class="navigator_arrow arrow_up" ng-show="navup" ng-click="gotopage(up)")
+    div(class="navigator_arrow arrow_up" ng-show="navup" ng-click="gotopage(up,3)")
       span(class="glyphicon glyphicon-chevron-up")
-    div(class="navigator_arrow arrow_down" ng-show="navdown" ng-click="gotopage(down)")
+    div(class="navigator_arrow arrow_down" ng-show="navdown" ng-click="gotopage(down,4)")
       span(class="glyphicon glyphicon-chevron-down")
