--- a/templates/views/layout.jade
+++ b/templates/views/layout.jade
@@ -1,8 +1,12 @@
 doctype html
-html(ng-app="ababool")
+html(
+  ng-app="ababool"
+  lang= conf.general.lang
+)
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/main.css')
+    include header.jade
+    include fonts.jade
+    include css.jade
   body(ng-controller="ababoolCtrl")
     block content
     script(src='/javascripts/ababool.min.js')
