--- a/templates/src/css/ababool/_system.scss
+++ b/templates/src/css/ababool/_system.scss
@@ -7,12 +7,23 @@ html {
 body {
     overflow: auto;
 }
+
+div#pt-main {
+    background: url(../images/ababool01.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 .pt-perspective {
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    -webkit-perspective: 1200px;
+    -moz-perspective: 1200px;
+    perspective: 1200px;
 }
+
 .pt-page {
     width: 100%;
     height: 100%;
