--- a/templates/ababool_plugins/mainmenu/_mainmenu.scss
+++ b/templates/ababool_plugins/mainmenu/_mainmenu.scss
@@ -1,4 +1,7 @@
 
+div#mainmenu {
+    background-color: #333;
+}
 
 ul#mainmenu {
     list-style-type: none;
@@ -10,9 +13,54 @@ ul#mainmenu {
     width: 100%;
     background-color: #fff;
     opacity: 0.8;
+    padding: 0;
+}
+ul#mainmenupage {
+    padding: 0;
+    margin-top: 20px;
 }
 
 .mainmenuli {
     cursor: pointer;
     padding: 15px;
+    border-left: 1px solid #e2e2e2;
+}
+.mainmenuli.mainmenuicon {
+    border-left: 0;
+}
+
+.mainmenulipage {
+    cursor: pointer;
+    padding: 15px;
+    border-bottom: 1px dotted #e2e2e2;
+    list-style-type: none;
+    color: #fff;
+    padding: 0;
+    padding: 10px;
+}
+
+div#menu-mainmenu {
+    color: #000;
+    position: absolute;
+    top: 0;
+    z-index: 9999;
+    border-left: 0;
+    right: 20px;
+}
+div#menu-brand {
+    color: #000;
+    position: absolute;
+    top: 0;
+    z-index: 9999;
+    border-left: 0;
+    left: 90px;
+    font-weight: 700;
+}
+div#menu-fullscreen{
+    color: #000;
+    position: absolute;
+    right: 60px;
+    top: 0;
+    z-index: 9999;
+    border-left: 0;
 }
