--- a/templates/ababool_plugins/ababool_theme/_theme.scss
+++ b/templates/ababool_plugins/ababool_theme/_theme.scss
@@ -7,12 +7,12 @@ html a {
 }
 
 div#pt-main {
-    background: url(../images/ababool01p.jpg) no-repeat center center fixed;
+    background: url(../images/ababool01.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-color: #F00;
+    background-color: #CCC;
 }
 
 .pt-page {
