--- a/templates/src/css/ababool/_system.scss
+++ b/templates/src/css/ababool/_system.scss
@@ -9,11 +9,8 @@ body {
 }
 
 div#pt-main {
-    background: url(../images/ababool01.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+
+      overflow: hidden;
 }
 .pt-perspective {
     position: relative;
