--- a/templates/views/header.jade
+++ b/templates/views/header.jade
@@ -10,7 +10,7 @@ meta(
 
 meta(
   name="viewport"
-  content="width=device-width, initial-scale=1.0"
+  content="width=device-width, initial-scale=1.0001, minimum-scale=1.0001, maximum-scale=1.0001, user-scalable=no"
   )
 
 - var thepages = pages
