--- a/templates/ababool_plugins/mainmenu/_mainmenu.scss
+++ b/templates/ababool_plugins/mainmenu/_mainmenu.scss
@@ -24,6 +24,7 @@ ul#mainmenupage {
     cursor: pointer;
     padding: 15px;
     border-left: 1px solid #e2e2e2;
+    float: left;
 }
 .mainmenuli.mainmenuicon {
     border-left: 0;
