--- a/templates/views/pages/home.jade
+++ b/templates/views/pages/home.jade
@@ -2,6 +2,8 @@
 
 h1 ababooljs
 h2
-  | Open-Source Full-Stack Javascript Solution <br/>
-  | for MEAN Single Page Applications
-button(class="btn btn-info" ng-click="gotopage('what',10)") More information
+  | The Open-Source, Creative & Smart<br/>
+  | Javascript Full-Stack Solution<br/>
+  | for creating Single Page Web Applications
+
+button(class="btn btn-primary" ng-click="gotopage('what',10)") More information
