--- a/templates/ababool_plugins/ababool_theme/_theme.scss
+++ b/templates/ababool_plugins/ababool_theme/_theme.scss
@@ -6,6 +6,13 @@ html a {
     -webkit-font-smoothing: subpixel-antialiased;
 }
 
+body  {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 300;
+}
+
 div#pt-main {
     background: url(../images/ababool01.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -49,12 +56,57 @@ div#pt-main {
     color: #000;
 }
 
-div#debug {
-    position: absolute;
-    z-index: 9999;
-    top: 100px;
-    height: 30px;
-    background-color: #fff;
-    min-width: 400px;
-    color: #000;
+h1 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 85px;
+    line-height: 85px;
+    font-weight: 300;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    margin-top: 36px;
+}
+
+h2 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 55px;
+    line-height: 55px;
+    font-weight: 300;
+    margin-top: 5px;
+    margin-bottom: 30px;
+}
+
+h3 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 45px;
+    line-height: 45px;
+    font-weight: 300;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+h4 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 35px;
+    line-height: 35px;
+    font-weight: 300;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+span.link{
+    cursor: pointer;
+}
+span.link:hover{
+  text-decoration: underline;
+  color: yellow;
+}
+
+.box {
+  padding-bottom: 60px;
+}
+.box2 {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  color: #000;
 }
