--- a/templates/ababool_plugins/preloader/index.jade
+++ b/templates/ababool_plugins/preloader/index.jade
@@ -1,2 +1,2 @@
 
-#preloader(class="preloader" ng-controller="ababoolPreloder" ng-hide="preloader")
+#preloader(class="preloader" ng-hide="preloader")
