--- a/templates/views/ajax.jade
+++ b/templates/views/ajax.jade
@@ -8,6 +8,7 @@
         data-right= value.right
         data-down= value.down
         data-up= value.up
+        data-ajax = value.ajax
         animationend="endpage"
         class="pt-page"
         )
