--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -19,6 +19,7 @@ block content
             data-right= value.right
             data-down= value.down
             data-up= value.up
+            data-ajax = value.ajax
             animationend="endpage"
             class="pt-page"
             )
