--- a/templates/views/pages/contents.jade
+++ b/templates/views/pages/contents.jade
@@ -3,11 +3,56 @@
 if index=="home"
   include home.jade
 
-if index=="why"
-  include why.jade
-
 if index=="what"
   include what.jade
+
+if index=="how"
+  include how.jade
+
+if index=="wow"
+  include wow.jade
+
+if index=="with"
+  include with.jade
+
+if index=="start"
+  include start.jade
+
+if index=="license"
+  include license.jade
+
+if index=="about"
+  include about.jade
+
+if index=="contact"
+  include contact.jade
+
+if index=="feedbacks"
+  include feedbacks.jade
+
+if index=="todo"
+  include todo.jade
+
+if index=="plugins"
+  include plugins.jade
+
+if index=="sitemap"
+  include sitemap.jade
+
+if index=="donate"
+  include donate.jade
+
+if index=="transitions"
+  include transitions.jade
+
+if index=="transitions2"
+  include transitions2.jade
+
+if index=="map"
+  include map.jade
+
+if index=="youtube"
+  include youtube.jade
 
 if index=="ajax1"
   include ajax1.jade
@@ -17,6 +62,6 @@ if index=="form"
 
 if index=="suscribe"
   include suscribe.jade
-  
+
 if index=="mainmenu"
   include mainmenu.jade
