--- a/templates/views/pages/home.jade
+++ b/templates/views/pages/home.jade
@@ -2,27 +2,6 @@
 div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
   h1 ababool
   h3
-    | The Open-Source, Creative & Smart<br/>
-    | <span class="link" ng-click="gotopage('what',10)">MEAN</span> Javascript Full-Stack Solution<br/>
-    | for creating Single Page Web Applications
-  div(class="box2")
-    | <h4>Prerequisite technologies</h4>
-    | <p>Ababool is a MEAN Full-Satck solution, do you must install NodeJS and MongoDB before.</p>
-    | <h4>Prerequisite packages</h4>
-    | <p>Ababool uses Gulp and Bower, so you would need to install both:  </p>
-    | <p><code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;gulp</code></p>
-    | <p><code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;bower</code></p>
-    | <h4>Installation</h4>
-    | <code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;ababool-generator</code>
-    | <h4>Quick Start</h4>
-    | <p>The quickest way to get started with express is to utilize the executable to generate an application as shown below:</p>
-    | <p>Create the app:</p>
-    | <p><code>$&nbsp;ababool&nbsp;/tmp/foo&nbsp;&amp;&amp;&nbsp;cd&nbsp;/tmp/foo</code></p>
-    | <p>Install dependencies:</p>
-    | <p><code>$&nbsp;npm&nbsp;install</code></p>
-    | <p>Gulp it!:</p>
-    | <p><code>$&nbsp;gulp</code></p>
-    | <p>Rock and Roll</p>
-    | <p><code>$&nbsp;npm&nbsp;start</code></p>
-    | <h3>License</h3>
-    | <p><a href="https://github.com/ciroartigot/ababool-generator/blob/master/LICENSE">MIT</a></p>
+    | An open source, creative and smart<br/>
+    | MEAN Javascript Full-Stack Solution<br/>
+    | for dreaming Single Page Web Applications
