--- a/templates/src/css/bootstrap-variables/_variables.scss
+++ b/templates/src/css/bootstrap-variables/_variables.scss
@@ -27,12 +27,12 @@ $brand-danger:          #d9534f !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               pink;
+$body-bg:               #e2e2e2;
 //** Global text color on `<body>`.
 $text-color:            $gray-dark !default;
 
 //** Global textual link color.
-$link-color:            green;
+$link-color:            #006699;
 //** Link hover color set via `darken()` function.
 $link-hover-color:      darken($link-color, 15%) !default;
 //** Link hover decoration.
