--- a/templates/views/pages/contact.jade
+++ b/templates/views/pages/contact.jade
@@ -1,15 +1,28 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
+div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
 
     h1 Contact us
 
-    div(class="box2")
+    div(class="box4")
 
-      h3 Social
+      h4 Social
+      p
+        | Contact us on Twitter: <a href="https://twitter.com/ababooljs" target="blank">@ababooljs</a>
 
-      h3 Discussions
+      h4 Discussions
+      p
+        | <a href="https://www.linkedin.com/grp/home?gid=8478122" target="blank">Discussion group</a>
+        | on Linked In
+        
+      h4 Email
+      p
+        | You can contact us by email: <br/>
+        | <a href="mailto:info@algosemueve.es" target="blank">info@algosemueve.es</a>
 
-      h3 Email / contact
+      h4 Issues
+      p
+        | Please submit issues to
+        | <a href="https://github.com/CiroArtigot/ababool/issues" target="blank">Git Hub</a>
 
-      h3 Issues
-
-      h3 Feedbacks
+      h4 Feedbacks
+      p
+        | <span class="link" ng-click="gotopage('feedbacks',32)">Give us your feedbacks!</span>
