--- a/templates/views/pages/license.jade
+++ b/templates/views/pages/license.jade
@@ -1,6 +1,9 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
+div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
   h1 MIT licensed
   h3
     | Ababool is open source and free
 
-  div(class="box2")
+  div(class="box4")
+    img(src="/images/license.png" class="pull-left")
+    h4(class="h4-2")
+      | Ababool is <a href="https://opensource.org/licenses/MIT" target="blank">MIT licensed</a>
