--- a/templates/views/pages/start.jade
+++ b/templates/views/pages/start.jade
@@ -3,14 +3,18 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
   h3
     | Create your Ababool web app!
   div(class="box2")
+    | <h4>Ababool on Git hub</h4>
+    | <p>You can clone the <a href="https://github.com/CiroArtigot/ababool"
+    | target="blank">Ababool Repository on Git Hub</a> or
+    | install Ababool with the Ababool App generator (recommended).<br/>
     | <h4>Prerequisite technologies</h4>
-    | <p>Ababool is a MEAN Full-Satck solution, do you must install NodeJS and MongoDB before.</p>
+    | <p>Ababool is a MEAN Full-Satck solution, do you must install NodeJS and MongoDB before.<br/></p>
     | <h4>Prerequisite packages</h4>
     | <p>Ababool uses Gulp and Bower, so you would need to install both:  </p>
     | <p><code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;gulp</code></p>
-    | <p><code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;bower</code></p>
+    | <p><code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;bower</code><br/></p>
     | <h4>Installation</h4>
-    | <code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;ababool-generator</code>
+    | <code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;ababool-generator</code><br/>
     | <h4>Quick Start</h4>
     | <p>The quickest way to get started with express is to utilize the executable to generate an application as shown below:</p>
     | <p>Create the app:</p>
