--- a/templates/views/pages/todo.jade
+++ b/templates/views/pages/todo.jade
@@ -1,6 +1,6 @@
 div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
   h1 Things to do
   h3
-    | Retos y cosas pendientes de Ababool
+    | Challenges and outstanding things
 
-  div(class="box2")
+  div(class="box3")
