--- a/templates/views/pages/about.jade
+++ b/templates/views/pages/about.jade
@@ -1,15 +1,8 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
+div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
   h1 About
-
-  p
-    | Ababool is a personal project of @ciroartigot
-
-  p
-    | "I developed Ababool for my applications and needs, but once developed, I realized that it could be useful to the developer community.
-    | Is this the reason of releasing the Ababool code.
-    | It is designed to be useful to perform creative and functional sites.
-    | I hope your collaboration, reviews, feedback and developments!
-    | Thank you very much to all of you."
-    | Ciro Artigot
-  p
-    | You can contact me via Twitter, Linked In or via the contact form.
+  div(class="box4")
+    p
+      | Ababool is a personal project of <a href="https://twitter.com/CiroArtigot" target="blank">@ciroartigot</a>
+    p
+      | You can contact me via <a href="https://twitter.com/CiroArtigot" target="blank">Twitter</a>,
+      | <a href="https://es.linkedin.com/in/ciroartigot" target="blank">Linked In</a>
