--- a/templates/ababool_plugins/ababool_theme/_theme.scss
+++ b/templates/ababool_plugins/ababool_theme/_theme.scss
@@ -26,11 +26,8 @@ div#pt-main {
 }
 
 #home {
-  background: url(../images/ababool01p.jpg) no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url(../images/diamond-upholstery.png) repeat;
+  background-color: #333; color: #FFF;
 }
 #what {
   background: url(../images/diamond-upholstery.png) repeat;
@@ -74,7 +71,13 @@ div#pt-main {
   background: url(../images/diamond-upholstery.png) repeat;
   background-color: #006699; color: #000}
 
-#contact { color: #000}
+  #youtube,
+#suscribe,
+#ajax1,
+#mainmenu,
+#contact {
+  background: url(../images/diamond-upholstery.png) repeat;
+  background-color: #006699; color: #000}
 
 #feedbacks, #form {
   background: url(../images/brick-wall-dark.png) repeat;
@@ -203,4 +206,35 @@ span.link:hover{
 
 ul.list-group.list-group-black {
     color: #000;
+}
+
+
+@media screen and (max-width: 480px) {
+  h1 {
+      font-family: 'Open Sans Condensed', sans-serif;
+      font-size: 55px;
+      line-height: 58px;
+      font-weight: 300;
+      padding-bottom: 0;
+      margin-bottom: 0;
+      margin-top: 15px;
+  }
+
+  h2 {
+      font-family: 'Open Sans Condensed', sans-serif;
+      font-size: 45px;
+      line-height: 48px;
+      font-weight: 300;
+      margin-top: 5px;
+      margin-bottom: 20px;
+  }
+
+  h3 {
+      font-family: 'Open Sans Condensed', sans-serif;
+      font-size: 35px;
+      line-height: 38px;
+      font-weight: 300;
+      margin-top: 5px;
+      margin-bottom: 20px;
+  }
 }
