--- a/templates/views/pages/contents.jade
+++ b/templates/views/pages/contents.jade
@@ -63,5 +63,20 @@ if index=="form"
 if index=="suscribe"
   include suscribe.jade
 
+if index=="navigator"
+  include navigator.jade
+
+if index=="left"
+  include left.jade
+
+if index=="right"
+  include right.jade
+
+if index=="up"
+  include up.jade
+
+if index=="down"
+  include down.jade
+
 if index=="mainmenu"
   include mainmenu.jade
