--- a/templates/views/pages/home.jade
+++ b/templates/views/pages/home.jade
@@ -10,6 +10,8 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
   ul(class="ababool-list")
     li Nodejs
     li Express
+    li Gulp
+    li Bower
     li Mongodb
     li Angularjs
     li Sass
