--- a/templates/views/pages/contents.jade
+++ b/templates/views/pages/contents.jade
@@ -78,5 +78,14 @@ if index=="up"
 if index=="down"
   include down.jade
 
+if index=="blog"
+  include blog.jade
+
+if index=="blog/hello-world"
+  include blog-helloworld.jade
+
 if index=="mainmenu"
   include mainmenu.jade
+
+if index=="es"
+  include esp.jade
